--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
     "date-fns": "^2.9.0",
+    "font-awesome": "^4.7.0",
     "gh-pages": "^2.2.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
