--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^4.13.0",
     "popper.js": "^1.16.0",
     "react": "^16.12.0",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.12.0",
     "react-loadingg": "^1.7.1",
     "react-redux": "^7.1.3",
