--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "homepage": "http://gamanhu.github.io/react123phim",
   "name": "react123phim",
   "version": "0.1.0",
+  "engines": {
+    "node": "12.13.1"
+  },
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
