--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.9.0",
     "font-awesome": "^4.7.0",
     "gh-pages": "^2.2.0",
+    "image-exists": "^1.1.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
     "popper.js": "^1.16.0",
